<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <!--android:paddingLeft="25dp"
    android:paddingTop="50dp"
    android:paddingRight="25dp"-->

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/relative"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_100"
                android:id="@+id/imageView"
                android:padding="15dp"
                android:src="@drawable/mob_logo"/>
            <TextView
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/padding_20"
                android:layout_below="@+id/imageView"
                android:layout_marginLeft="@dimen/padding_5"
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_30"
                android:text="@string/login"/>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/padding_40"
                android:layout_below="@+id/title"
                android:id="@+id/login_cardView"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/lightBlue"
                app:cardElevation="@dimen/padding_2"
                app:cardCornerRadius="@dimen/padding_5"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:padding="@dimen/padding_20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:id="@+id/rl_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:visibility="gone"
                                android:id="@+id/tv_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/emailAddress"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size_14" />
                            <RelativeLayout
                                android:layout_marginTop="@dimen/padding_10"
                                android:layout_below="@+id/tv_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/input_layout_email"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/padding_45"
                                    app:hintEnabled="false"
                                    android:layout_centerVertical="true">

                                    <EditText
                                        android:id="@+id/username"
                                        android:drawableLeft="@drawable/ic_user"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:drawablePadding="@dimen/padding_10"
                                        android:hint="@string/emailAddress"
                                        android:background="@drawable/text_bg_selector"
                                        android:inputType="text"
                                        android:paddingLeft="@dimen/padding_10"
                                        android:textColor="@color/black"
                                        android:textSize="@dimen/text_size_14" />
                                </com.google.android.material.textfield.TextInputLayout>

                            </RelativeLayout>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_marginTop="@dimen/padding_10"
                            android:layout_below="@+id/rl_email"
                            android:id="@+id/rl_pwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_pwd"
                                android:visibility="gone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size_14"
                                android:text="@string/password"/>
                            <RelativeLayout
                                android:layout_marginTop="@dimen/padding_10"
                                android:layout_below="@+id/tv_pwd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">



                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/input_layout_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/padding_45"
                                    app:hintEnabled="false"
                                    app:passwordToggleEnabled="true"
                                    app:passwordToggleTint="@color/colorPrimaryDark">

                                    <EditText
                                        android:id="@+id/password"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:background="@drawable/text_bg_selector"
                                        android:drawableStart="@drawable/ic_password"
                                        android:drawableLeft="@drawable/ic_password"
                                        android:drawablePadding="@dimen/padding_10"
                                        android:hint="@string/password"
                                        android:inputType="textPassword"
                                        android:paddingLeft="@dimen/padding_10"
                                        android:textColor="@color/black"
                                        android:textSize="@dimen/text_size_14" />
                                </com.google.android.material.textfield.TextInputLayout>

                            </RelativeLayout>
                        </RelativeLayout>


                        <com.royrodriguez.transitionbutton.TransitionButton
                            android:id="@+id/login"
                            android:layout_width="@dimen/padding_200"
                            android:layout_height="@dimen/padding_45"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/rl_pwd"
                            android:layout_marginTop="26dp"
                            android:background="@drawable/button_bg"
                            android:text="@string/sign_in"
                            app:defaultColor="#273375"
                            app:loaderColor="@android:color/white"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_13" />

                        <TextView
                            android:id="@+id/forgotPass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/login"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/padding_20"
                            android:text="@string/forgotPassword"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_14"
                            android:visibility="visible" />

                    </RelativeLayout>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <RelativeLayout
                android:id="@+id/rl_bottom"
                android:layout_below="@+id/login_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_5"
                android:layout_marginTop="@dimen/padding_20"
                android:layout_marginLeft="@dimen/padding_40"
                android:layout_marginRight="@dimen/padding_40">

                <TextView
                    android:layout_marginTop="@dimen/padding_5"
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/notRegister"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <com.royrodriguez.transitionbutton.TransitionButton
        android:id="@+id/signup"
        android:layout_width="200dp"
        android:layout_height="@dimen/padding_45"
        android:layout_below="@+id/scroll_login"
        android:layout_marginLeft="100dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="131dp"
        android:background="@drawable/button_bg"
        android:text="Register"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_13"
        app:defaultColor="#273375"
        app:loaderColor="@android:color/white" />
</RelativeLayout>